# DredgeModManager

./: LICENSE  README.md  database-schema.json  database.json  index.html  package-lock.json  package.json  vite.config.ts
.github/workflows/: main.yml  test.yml
src/: App.css  App.scss  App.tsx
src-tauri/: Cargo.toml  tauri.conf.json  tauri.conf.json5
src-tauri/icons/: icon.icns
src-tauri/src/: database.rs  files.rs  main.rs  mods.rs  winch_config.rs
src/components/: appcontext.ts  appcontext.tsx  content.tsx  index.tsx  modinfo.tsx  mods.tsx  settings.tsx  sidebar.tsx  winchconfig.tsx
src/components/mods/: AvailableMod.tsx  InstalledMod.tsx  Mod.tsx  ModComponents.tsx  ModList.tsx  Mods.tsx  ModsNotFound.tsx  ModsTab.tsx  SearchField.tsx  SortField.tsx
src/components/settings/: BooleanConfig.tsx  settings.tsx
src/components/sidebar/: Sidebar.tsx  SidebarOption.tsx  SidebarPlay.tsx  sidebar.tsx
src/scss/: _colours.scss  content.scss  mods.scss  settings.scss  sidebar.scss  styles.scss
src/scss/mods/: mods.scss  modsAvailableInstalled.scss  modsNotFound.scss
src/scss/sidebar/: sidebar.scss  sidebarOption.scss  sidebarPlay.scss
src/util/: genericHandleError.ts
