[package]
name = "dredge_mod_manager"
version = "0.0.2"
description = "Mod manager application for DREDGE"
authors = ["xen-42"]
license = "MIT"
repository = "https://github.com/xen-42/DredgeModManager"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.3", features = ["config-json5"] }

[dependencies]
tauri = { version = "1.3", features = ["config-json5", "dialog-all", "shell-open", "updater"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
directories = "5.0.1"
walkdir = "2.3.3"
reqwest = "0.11.18"
tokio = "1.28.1"
zip-extract = "0.1.2"
open = "4.1.0"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
